--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm -- -d src/data-source.ts migration:generate src/migrations/init",
+    "migration:run": "npm run typeorm -- -d src/data-source.ts migration:run",
+    "db:create": "psql -U postgres -c \"CREATE DATABASE podcast_db\""
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -28,6 +32,7 @@
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dotenv": "^17.2.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
